Fixed overflow for <pre> license tag in About page

--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -58,3 +58,7 @@ li {
 	color: #666;
 	margin-bottom: 5px;
 }
+
+pre {
+	overflow: auto;
+}
